# SimpleMath

./: CMakeLists.txt  Readme.md
include/: simplemath.h
src/: simplemath.cpp
tests/: main.cpp
